JavaBuilder: clean value = Boolean.valueOf(stringValue);